added update ande delete actions

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,7 @@
     <strong><%= article.title %></strong> 
     <p><%= article.content %></p> 
     <%= link_to "Show", article_path(article.id) %>
+    <%= button_to "Delete", article_path(article.id), method: :delete %>
   <% end %>
 </ul>
 <%= link_to "New", articles_new_path %>
