--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @article do |form| %>
+<%= form_with model: article do |form| %>
 <%= form.label :title %>
 <%= form.text_field :title %>
 <%= form.label :content %>
