--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,8 +3,8 @@
   <% @articles.each do |article| %>
     <strong><%= article.title %></strong> 
     <p><%= article.content %></p> 
-    <%= link_to "Show", article_path(article.id) %>
-    <%= button_to "Delete", article_path(article.id), method: :delete %>
+    <%= link_to "Show", article %>
+    <%= button_to "Delete", article, method: :delete %>
   <% end %>
 </ul>
-<%= link_to "New", articles_new_path %>
+<%= link_to "New", new_article_path %>
