added simple validations for title and content

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,12 @@
 <%= form_with model: article do |form| %>
+<% if article.errors.any? %>
+  <h3><%= pluralize(article.errors.count, "error")%> prevented artcile from being saved.</h3>
+  <ul>
+    <% article.errors.each do |error|%>
+      <li><%= error.full_message %></li>
+    <% end %>
+  <% end %>
+  </ul>
 <%= form.label :title %>
 <%= form.text_field :title %>
 <%= form.label :content %>
