--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,12 @@
 <%= render "article", article: @article %>
 
 <%= link_to "HomePage", root_path %>
+<h2> New Comment </h2>
+<%= form_with model: [ @article, @article.comments.build ] do |f|%>
+  <%= f.text_area :body %>
+  <%= f.submit %>
+<% end %>
+<h3>Comments</h3>
+<% @article.comments.each do |comment| %>
+  <p><%= comment.body %></p>
+<% end %>
